# DarkestDecision

./: Cargo.toml  README.md
src/: main.rs
src/catalog/: encounter.rs  encounter_id.rs  enemies.rs  mod.rs
src/catalog/effect/: consts.rs  effect.rs  mod.rs
src/catalog/heroes/: combat_skill.rs  heroes.rs  mod.rs
static/: styles.css
templates/: index.html
templates/partials/: area_and_encounter_fields.html  dependent_fields.html  encounter_field.html  evaluation.html
